# draw_in_flow

./: Cargo.toml  README.md  package.json  webpack.config.js
.cargo/: config
src/: advection.rs  airfoil.rs  bc.rs  cells.rs  cmap.rs  collision.rs  distribution.rs  interpolation.rs  jitter.rs  lib.rs  lic.rs  marching.rs  na.rs  parameters.rs  plot.rs
www/: index.html  main.js  style.css
www/modules/: drawer.js  painter.js  player.js  setup.js
